--- a/booking.html
+++ b/booking.html
@@ -6,6 +6,10 @@
 <link rel="stylesheet" href="styles/css.css"/>
 <link rel="stylesheet" href="styles/w3.css">
 <link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="1.js"></script>
 
 </head>
@@ -25,114 +29,100 @@
 <div id="mid">
 <form name="theForm" method="post" action="booking.php">
 <fieldset>
-	<legend><p class="font" style="margin:4em 0 0 21em ">請輸入訂購資料</p></legend>
+	<legend><p class="font" style="margin:1em 0 0 21em ">請輸入訂購資料</p></legend>
 	<div class="font1" >
 	<p class="font1" style="margin-left:600px;margin-top:30px">取餐方式:
 <input type="radio" onclick="delivery()" name="takeway"  value="delivery"required>外送
 	<input type="radio" onclick="takeout()" name="takeway" value="takeout">外帶</div><br>
-	<p class="font1"style="margin-left:500px;margin-top:20px">取餐時間:<input type="date" required id="time" name="time" style="width:220px;">
+	<p class="font1"style="margin-left:500px;margin-top:20px">取餐時間:<input type="text" required id="datepicker" name="time" onchange="a()" style="width:220px;">
 	<select id="ti" name="ti" required style="font-size:25px;color:gray;height:43px;width:140px;margin-left:-10px"></select></p><br> 
 	<script>
-	
-var dt = new Date();
+$( function() {
+    $(  "#datepicker" ).datepicker({
+  maxDate: " +5d",
+  minDate: "0"
+});
+// 獲取值
+var dateFormat = $( "#datepicker" ).datepicker( "option", "dateFormat" );
+// 設定顯示方式
+$( "#datepicker" ).datepicker( "option", "dateFormat", "yy-mm-dd" );
+$("#datepicker").attr('autocomplete', 'off'); 
+} );
+
+
+function a(){                   //將可訂購時間丟入陣列，當使用者選擇日期時觸發
+    var dt = new Date();
 var month = new Array(12);
 var day = new Array(31);
 var hour = new Array(24);
 var min = new Array(60);
+var a =0;
+var abc=new Array('09:30','09:35','09:40','09:45','09:50','09:55'
+,'10:00','10:05','10:10','10:15','10:20','10:25','10:30','10:35','10:40','10:45','10:50','10:55'
+,'11:00','11:05','11:10','11:15','11:20','11:25','11:30','11:35','11:40','11:45','11:50','11:55'
+,'12:00','12:05','12:10','12:15','12:20','12:25','12:30','12:35','12:40','12:45','12:50','12:55'
+,'13:00','13:05','13:10','13:15','13:20','13:25','13:30','13:35','13:40','13:45','13:50','13:55'
+,'14:00','14:05','14:10','14:15','14:20','14:25','14:30','14:35','14:40','14:45','14:50','14:55'
+,'15:00','15:05','15:10','15:15','15:20','15:25','15:30','15:35','15:40','15:45','15:50','15:55'
+,'16:00','16:05','16:10','16:15','16:20','16:25','16:30','16:35','16:40','16:45','16:50','16:55'
+,'17:00','17:05','17:10','17:15','17:20','17:25','17:30','17:35','17:40','17:45','17:50','17:55'
+,'18:00','18:05','18:10','18:15','18:20','18:25','18:30','18:35','18:40','18:45','18:50','18:55'
+,'19:00','19:05','19:10','19:15','19:20','19:25','19:30','19:35','19:40','19:45','19:50','19:55'
+,'20:00','20:05','20:10','20:15','20:20','20:25','20:30'
+)
 
-day[0]="01",day[1]="02",day[2]="03",day[3]="04",day[4]="05",day[5]="06";day[6]="07",day[7]="08",day[8]="09",day[9]="10",day[10]="11",
-day[11]="12",day[12]="13",day[13]="14",day[14]="15",day[15]="16",day[16]="17",day[17]="18",day[18]="19",day[19]="20",day[20]="21",
-day[21]="22",day[22]="23",day[23]="24",day[24]="25",day[25]="26",day[26]="27",day[27]="28",day[28]="29",day[29]="30",day[30]="31";
-month[0] = "01",month[1] = "02",month[2] = "03",month[3] = "04",month[4] = "05",month[5] = "06",
-month[6] = "07",month[7] = "08",month[8] = "09",month[9] = "10",month[10] = "11",month[11] = "12";
-hour[0]="01",hour[1]="02",hour[2]="03",hour[3]="04",hour[4]="05",hour[5]="06";hour[6]="07",hour[7]="08",hour[8]="09",hour[9]="10",hour[10]="11",
-hour[11]="12",hour[12]="13",hour[13]="14",hour[14]="15",hour[15]="16",hour[16]="17",hour[17]="18",hour[18]="19",hour[19]="20",hour[20]="21",
-hour[21]="22",hour[22]="23",hour[23]="00";
-min[0]="01",min[1]="02",min[2]="03",min[3]="04",min[4]="05",min[5]="06";min[6]="07",min[7]="08",min[8]="09",min[9]="10",min[10]="11",
-min[11]="12",min[12]="13",min[13]="14",min[14]="15",min[15]="16",min[16]="17",min[17]="18",min[18]="19",min[19]="20",min[20]="21",
-min[21]="22",min[22]="23",min[23]="24",min[24]="25",min[25]="26",min[26]="27",min[27]="28",min[28]="29",min[29]="30",min[30]="31";
-min[31]="32",min[32]="33",min[33]="34",min[34]="35",min[35]="36",min[36]="37";min[37]="38",min[38]="39",min[39]="40",min[40]="41",min[41]="42",
-min[42]="43",min[43]="44",min[44]="45",min[45]="46",min[46]="47",min[47]="48",min[48]="49",min[49]="50",min[50]="51",min[51]="52",
-min[52]="53",min[53]="54",min[54]="55",min[55]="56",min[56]="57",min[57]="58",min[58]="59",min[59]="00"
-if ( month[dt.getMonth()] == 1  ||  month[dt.getMonth()] == 3  ||  month[dt.getMonth()] == 5  ||  month[dt.getMonth()] == 7  ||
- month[dt.getMonth()] == 8  ||  month[dt.getMonth()] == 10  ||  month[dt.getMonth()] == 12  && dt.getDate()+5>31)
-{
- document.getElementById("time").min =(dt.getFullYear()+ "-"+ ( month[dt.getMonth()]) + "-" + dt.getDate());
-document.getElementById("time").max =(dt.getFullYear()+ "-" + ( month[dt.getMonth()+1]) + "-" + day[dt.getDate()+4-31]);
-}
-if ( month[dt.getMonth()] == 2  ||  month[dt.getMonth()] == 4  ||  month[dt.getMonth()] == 6  ||  month[dt.getMonth()] == 9  ||
- month[dt.getMonth()] == 11  && dt.getDate()+5>30)
- {
-document.getElementById("time").min =(dt.getFullYear()+ "-" + ( month[dt.getMonth()]) + "-" + dt.getDate());
-document.getElementById("time").max =(dt.getFullYear()+ "-" + ( month[dt.getMonth()+1]) + "-" + day[dt.getDate()+4-30]); 
-}
-if (dt.getDate()+5<31)
- {
-document.getElementById("time").min =(dt.getFullYear()+ "-" + ( month[dt.getMonth()]) + "-" + dt.getDate());
-document.getElementById("time").max =(dt.getFullYear()+ "-" + ( month[dt.getMonth()]) + "-" + day[dt.getDate()+4]); //設定日期只能在五天內訂購
+
+    var a=document.getElementById('datepicker');
+    var b=a.value;
+    var NewArray = new Array();
+　var NewArray = b.split( "-" , 3 );
+if (NewArray[2] == dt.getDate() && dt.getHours()>9 && dt.getHours()<20 && dt.getMinutes()<15 && dt.getMinutes()>=0){  //判斷訂購日期是否為今日訂購以及是否在可訂購時間內，並設定至少30分鐘後取餐
+    form=document.theForm;
+a=dt.getHours()+":"+'45';
+var aa =abc.indexOf(a);
+var b=0;
+for(i=aa;i<abc.length;i++){
+    form.ti.options[b]=new Option(abc[i]);
+    b=b+1;
  }
-else if(dt.getDate()+5>31){
- {
- document.getElementById("time").min =(dt.getFullYear()+ "-" + ( month[dt.getMonth()]) + "-" + dt.getDate());
-document.getElementById("time").max =(dt.getFullYear()+ "-" + ( month[dt.getMonth()+1]) + "-" + day[dt.getDate()-31]); //設定日期只能在五天內訂購
+}  else if  (NewArray[2] == dt.getDate() && dt.getHours()>9 && dt.getHours()<20 &&dt.getMinutes()<30 && dt.getMinutes()>=15){
+    form=document.theForm;
+a=dt.getHours()+1+":"+'00';
+var aa =abc.indexOf(a);
+var b=0;
+for(i=aa;i<abc.length;i++){
+    form.ti.options[b]=new Option(abc[i]);
+    b=b+1;
  }
 }
- 
-if (dt.getMinutes()+15 > 60) //31-60
-{
-document.getElementById("ti").options[3]=new Option(hour[dt.getHours()+1]+":"+min[dt.getMinutes()-1-15]);
+   else if  (NewArray[2] == dt.getDate() && dt.getHours()>9 && dt.getHours()<20 && dt.getMinutes()<45 && dt.getMinutes()>=30){
+    form=document.theForm;
+a=dt.getHours()+1+":"+'00';
+var aa =abc.indexOf(a);
+var b=0;
+for(i=aa;i<abc.length;i++){
+    form.ti.options[b]=new Option(abc[i]);
+    b=b+1;
+ }
+ }
+   else if  (NewArray[2] == dt.getDate()&& dt.getHours()>9 && dt.getHours()<20&&dt.getMinutes()<60 && dt.getMinutes()>=45){
+    form=document.theForm;
+a=dt.getHours()+1+":"+'30';
+var aa =abc.indexOf(a);
+var b=0;
+for(i=aa;i<abc.length;i++){
+    form.ti.options[b]=new Option(abc[i]);
+    b=b+1;
+ }
+}   else if (NewArray[2] != dt.getDate()){
+    form=document.theForm;
+for(i=0;i<abc.length;i++){
+    form.ti.options[i]=new Option(abc[i]);
 }
-else if(dt.getMinutes()+15 < 60) //0-29
-{
-document.getElementById("ti").options[3]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1+15]);
 }
-else //30
-{
-document.getElementById("ti").options[3]=new Option(hour[dt.getHours()+1]+":"+min[dt.getMinutes()-1+15]);
-}
-if (dt.getMinutes()+30 > 60) //31-60
-{
-document.getElementById("ti").options[0]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1-30]);
-document.getElementById("ti").options[4]=new Option(hour[dt.getHours()+1]+":"+min[dt.getMinutes()-1-30]);
-
-}
-else if(dt.getMinutes()+30 < 60) //0-29
-{
-document.getElementById("ti").options[0]=new Option(hour[dt.getHours()-1]+":"+min[dt.getMinutes()-1+30]);
-document.getElementById("ti").options[4]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1+30]);
-}
-else //30
-{
-document.getElementById("ti").options[0]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1+30]);
-document.getElementById("ti").options[4]=new Option(hour[dt.getHours()+1]+":"+min[dt.getMinutes()-1+30]);
-}
-if (dt.getMinutes()+45 >60) //16-60
-{
-document.getElementById("ti").options[1]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1-15]);
-document.getElementById("ti").options[5]=new Option(hour[dt.getHours()+1]+":"+min[dt.getMinutes()-1-15]);
-}
-else if(dt.getMinutes()+45 < 60) // 1-14
-{
-document.getElementById("ti").options[1]=new Option(hour[dt.getHours()-1]+":"+min[dt.getMinutes()-1+45]);
-document.getElementById("ti").options[5]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1+45]);
-
-}
-else //15
-{
-document.getElementById("ti").options[1]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1+45]);
-document.getElementById("ti").options[5]=new Option(hour[dt.getHours()+1]+":"+min[dt.getMinutes()-1+45]);
-
-}
-if (dt.getMinutes()+60 >60) //1-60
-{
-document.getElementById("ti").options[2]=new Option(hour[dt.getHours()]+":"+min[dt.getMinutes()-1]);
-document.getElementById("ti").options[6]=new Option(hour[dt.getHours()+1]+":"+min[dt.getMinutes()-1]);
-
-}
-else //0
-{
-document.getElementById("ti").options[2]=new Option(hour[dt.getHours()]+":"+"00");
-document.getElementById("ti").options[6]=new Option(hour[dt.getHours()+1]+":"+"00"); //設定訂購時間只能在半小時以上取餐
+    else {
+    alert('請在早上9點後及晚上8點前訂購哦~');
+    }
 }
 function node(name, child){
 	this.name=name;
