--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div>
 		
 	<div id="header">
-		<img src="images/logo.png "   style="relative;width:30%; height:100%;float:right; " />
+		<img src="images/logo.png "   style="width:30%; height:100%;float:right; " />
 		<a href="index.html" style ="position: relative; bottom: 0; left: 10px; top: 35px;font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>關於龍品</b></a>
 	
 		<a href="product.html" style="position: relative; bottom: 0; left: 30px; top: 35px; font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>產品介紹</b></a>
@@ -23,7 +23,7 @@
 <div style="height:500px">
 <img style="width:100%; height:100%; border-style:solid; border-color:black; border-width:2px;" src="images\book.jpg" alt="龍品快餐店" >
 </div>
-<span style="position: absolute; bottom: 0; left: 550px; top: 250px; font-size: 80px; height: 80px;color: white; text-shadow: 0px 0px 6px rgba(255,255,255,0.7);font-family:Microsoft JhengHei"><b>關於龍品</b></span> 
+<span style="position: absolute; bottom: 0; left: 550px; top: 300px; font-size: 80px; height: 80px;text-shadow: 0px 0px 6px rgba(255,255,255,0.7);font-family:Microsoft JhengHei"><b>關於龍品</b></span> 
 <div style="margin:5em 17em;">
 	<p style="font-size: 35px;font-family:cwTeXYen,sans-serif;">歷史：</br></br>
 	創始店名為“龍品魚丸店”，創立於民國八十三年，在台中已好幾家分店的龍品</br></br>
