--- a/booking.html
+++ b/booking.html
@@ -17,7 +17,7 @@
 	<div>
 			
 		<div id="header">
-			<img src="images/logo.png "   style="relative;width:30%; height:100%;float:right; " />
+			<img src="images/logo.png "   style="width:30%; height:100%;float:right; " />
 			<a href="index.html" style ="position: relative; bottom: 0; left: 10px; top: 26px;font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>關於龍品</b></a>
 		
 			<a href="product.html" style="position: relative; bottom: 0; left: 29px; top: 26px; font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>產品介紹</b></a>
