--- a/booking.html
+++ b/booking.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <title>線上訂餐</title>
 <link rel="stylesheet" href="styles/css.css"/>
 <link rel="stylesheet" href="styles/w3.css">
@@ -48,6 +53,7 @@ var dateFormat = $( "#datepicker" ).datepicker( "option", "dateFormat" );
 $( "#datepicker" ).datepicker( "option", "dateFormat", "yy-mm-dd" );
 $("#datepicker").attr('autocomplete', 'off'); 
 } );
+
 
 function a(){                   //將可訂購時間丟入陣列，當使用者選擇日期時觸發
     var dt = new Date();
