--- a/bstext.html
+++ b/bstext.html
@@ -14,19 +14,26 @@
 </head>
 
 <body>
-<div>
-		
-	<div id="header">
-		<img src="images/logo.png "   style="width:30%; height:100%;float:right; " />
-		<a href="index.html" style ="position: relative; bottom: 0; left: 10px; top: 35px;font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>關於龍品</b></a>
-	
-		<a href="product.html" style="position: relative; bottom: 0; left: 30px; top: 35px; font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>產品介紹</b></a>
-	
-		<a href="booking.html" style="position: relative; bottom: 0; left: 50px; top: 35px;font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>線上訂餐</b></a>
-	</div>
-
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Brand/logo -->
+        <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" class="img-fluid" alt="logo" width="200" height="50">
+        </a>
+        <!-- Links -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;">關於龍品</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="product.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;">產品介紹</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="booking.html" style ="font-size: 30px;font-family:cwTeXYen,sans-serif;">線上訂餐</a>
+          </li>
+        </ul>
+      </nav>
+        <img src="images\13.jpg"  alt="龍品快餐店"  style="margin-bottom:0" width="100%" height="500">
 <div style="height:500px">
-<img style="width:100%; height:100%; border-style:solid; border-color:black; border-width:2px;" src="images\13.jpg" alt="龍品快餐店" >
 </div>
 <span style="position: absolute; bottom: 0; left: 550px; top: 300px; font-size: 80px; height: 80px;text-shadow: 0px 0px 6px rgba(255,255,255,0.7);font-family:Microsoft JhengHei"><b>關於龍品</b></span> 
 <div style="margin:5em 17em;">
@@ -49,7 +56,6 @@
 		<p  style="font-family:cwTeXYen,sans-serif;color:white;font-size:25px">。地址：台中市北區北平路二段68之1號</p>
 		<p  style="font-family:cwTeXYen,sans-serif;color:white;font-size:25px">。備註：如餐點需訂購10份以上，請撥電話:04-2291-8106。</p>
 			</div>
-</div>
 
 </body>
 </html>
