--- a/product.html
+++ b/product.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <title>產品介紹</title>
 <link rel="stylesheet" href="styles\css.css" media="screen" type="text/css" />
 <link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
@@ -19,7 +24,7 @@
 				<a href="booking.html" style="position: relative; bottom: 0; left: 50px; top: 35px;font-size: 35px;font-family:cwTeXYen,sans-serif;color:white"><b>線上訂餐</b></a>
 			</div>
 <div style="height:500px">
-<img style="width:100%; height:100%; border-style:solid; border-color:black; border-width:2px;" src="images\book.jpg" alt="龍品快餐店" >
+<img style="width:100%; height:100%; border-style:solid; border-color:black; border-width:2px;" src="images\13.jpg" alt="龍品快餐店" >
 </div>
 <span style="position: absolute; bottom: 0; left: 550px; top: 300px; font-size: 80px; height: 80px; text-shadow: 0px 0px 6px rgba(255,255,255,0.7);font-family:Microsoft JhengHei"><b>產品介紹</b></span>
 
