產品介紹頁面按鈕樣式調整

--- a/product.html
+++ b/product.html
@@ -43,21 +43,21 @@
       </div>
 
         <div class="btn-group" style="margin:10px 8px;width:100%;">  
-          <a class="btn btn-blue"  href="#a1"><p class="font10">魯肉便當</p></a>
-	        <a class="btn  btn-green" href="#a2"><p class="font10">特製便當</p></a>
-	        <a class="btn  btn-orange" href="#a3"><p class="font10">花枝捲飯</p></a>
-	        <a class="btn  btn-red" href="#a4"><p class="font10">蝦捲飯</p></a>
-	        <a class="btn  btn-maroon" href="#a5"><p class="font10">滷排骨飯</p></a>
-	        <a class="btn  btn-fuchsia" href="#a6"><p class="font10">炸雞腿飯</p></a>      
+          <a class="btn btn-blue"  href="#a1">魯肉便當</a>
+	        <a class="btn  btn-green" href="#a2">特製便當</a>
+	        <a class="btn  btn-orange" href="#a3">花枝捲飯</a>
+	        <a class="btn  btn-red" href="#a4">蝦捲飯</a>
+	        <a class="btn  btn-maroon" href="#a5">滷排骨飯</a>
+	        <a class="btn  btn-fuchsia" href="#a6">炸雞腿飯</a>      
 	
         </div>
         <div class="btn-group" style="margin:10px 8px;width:100%;"> 
-        	<a class="btn  btn-indigo" href="#a7"><p class="font10">鱈魚飯</p></a>
-	        <a class="btn  btn-saddlebrown" href="#a8"><p class="font10">炸排骨飯</p></a>
-        	<a class="btn  btn-chocolate" href="#a9"><p class="font10">香雞排飯</p></a>
-	        <a class="btn  btn-gold" href="#a10"><p class="font10">雙捲飯</p></a>
-	        <a class="btn  btn-darkolivegreen" href="#a11"><p class="font10">三寶飯</p></a>
-	        <a class="btn  btn-royalblue" href="#a12"><p class="font10">招牌飯</p></a>
+        	<a class="btn  btn-indigo" href="#a7">鱈魚飯</a>
+	        <a class="btn  btn-saddlebrown" href="#a8">炸排骨飯</a>
+        	<a class="btn  btn-chocolate" href="#a9">香雞排飯</a>
+	        <a class="btn  btn-gold" href="#a10">雙捲飯</a>
+	        <a class="btn  btn-darkolivegreen" href="#a11">三寶飯</a>
+	        <a class="btn  btn-royalblue" href="#a12">招牌飯</a>
         </div >
 	
 <div class="container" id="a1" style="margin-top:10em;">
